# bm-syntax

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
module/: bm-syntax.zsh
src/: highlighter.rs  lib.rs  main.rs  theme.rs
